# cppserv

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
core/: http_request.h  http_request.hpp  http_response.hpp  poll_server.cpp  poll_server.hpp  request_parser.cpp  request_parser.h  request_parser.hpp  route_handler.hpp  router.cpp  router.hpp  sender.hpp  server.cpp  server.hpp  server_runner.hpp  thread_pool.cpp  thread_pool.hpp
core/server_runners/: poll_server.cpp  poll_server.hpp  select_server.cpp  select_server.hpp
docs/: cppserv.drawio
